@@ -8,6 +8,7 @@ XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
   Issue #325
 * Bug fix: impossible to create a nested project directory
 * Bug fix: do not show the 'reload' menu item for deleted file
+* Bug fix: saving as into a file which is opened in another tab. Issue #317
 
 
 
